--- a/storybook/design-system/src/components/code/code.scss
+++ b/storybook/design-system/src/components/code/code.scss
@@ -5,37 +5,47 @@
         position: relative;
         height: 300px;
       }
+
       &-middle {
         position: absolute;
         width: 100%;
         overflow: hidden;
       }
+
       &-inner {
         height: 300px;
         display: flex;
         overflow: auto;
-        background: $color-code-background;
+        background: $black;
       }
     }
+
     &__icon {
       display: flex;
       flex-direction: column;
+      align-items: center;
       position: absolute;
-      right: 20px;
-      top: 10px;
+      right: 15px;
+      top: 15px;
       height: 39px;
       width: 50px;
       cursor: pointer;
-      fill: $white;
+
       &--copied {
         fill: $color-btn-success;
+
         .#{$prefix}-code__icon-text {
           color: $color-btn-success;
         }
       }
+
       &-text {
-        color: $color-code-background;
+        color: $black;
       }
     }
+  }
+
+  &-icon--copy {
+    fill: $white;
   }
 }
