--- a/storybook/design-system/src/components/page/page-title.pug
+++ b/storybook/design-system/src/components/page/page-title.pug
@@ -1,2 +1,6 @@
-div(class=`${prefix}-page__header`)
-    block page-title
+mixin PageTitle({ title, subtitle })
+  div(class=`${prefix}-page__header`)
+    +Title({level:"h1", modifier:""})
+      | #{title}
+    +Title({level:"h2", modifier:""})
+      | #{subtitle}
