--- a/storybook/design-system/src/pages/molecules/title-bar/templates/title-bar-complex.pug
+++ b/storybook/design-system/src/pages/molecules/title-bar/templates/title-bar-complex.pug
@@ -8,7 +8,7 @@
       small.af-title-bar__subtitle Sous titre
     .af-title-bar__actions
       a.af-title-bar__link(href="#lien" title="lien titlebar") lien titlebar
-      a.af-btn-circle(href="#enregistrer" title="Enregistrer" role="button" tabindex="0")
+      a.af-btn--circle(href="#enregistrer" title="Enregistrer" role="button" tabindex="0")
         i.glyphicon.glyphicon-floppy-disk
-      a.af-btn-circle(href="#imprimer" title="Imprimer" role="button" tabindex="0")
+      a.af-btn--circle(href="#imprimer" title="Imprimer" role="button" tabindex="0")
         i.glyphicon.glyphicon-print
