--- a/storybook/design-system/src/components/code/code.pug
+++ b/storybook/design-system/src/components/code/code.pug
@@ -1,10 +1,10 @@
-mixin Code()
-    div(class=`${prefix}-code__wrapper-outer`)
-        div(class=`${prefix}-code__wrapper-middle`)
-            div(class=`${prefix}-code__wrapper-inner`)
-                div(class=`${prefix}-code__icon`)
-                    +Icon({id:'copy'})
-                    span(class=`${prefix}-code__icon-text`) Copied
-                pre(class="pre")
-                    code(class="html")
-                        block
+mixin Code({ htmlCode })
+  div(class=`${prefix}-code__wrapper-outer`)
+    div(class=`${prefix}-code__wrapper-middle`)
+      div(class=`${prefix}-code__wrapper-inner`)
+        div(class=`${prefix}-code__icon`)
+          +Icon({id:'copy', modifier: 'copy'})
+          span(class=`${prefix}-code__icon-text`) Copied
+        pre.pre
+          code.html
+            | #{pretty(htmlCode())}
