--- a/storybook/design-system/src/components/page/page-content.pug
+++ b/storybook/design-system/src/components/page/page-content.pug
@@ -1,2 +1,3 @@
-div(class=`${prefix}-page__content`)
-    block page-content
+mixin PageContent()
+  div(class=`${prefix}-page__content`)
+    block
