--- a/storybook/design-system/src/components/page/page.scss
+++ b/storybook/design-system/src/components/page/page.scss
@@ -18,7 +18,7 @@
 
       h1 {
         color: $color-marine;
-        margin-top: 0;
+        margin: 0;
         font-size: 2.5rem;
         font-family: $font-family-headings;
         transform: skewX(-15deg);
@@ -35,7 +35,6 @@
 
     &__content {
       padding: 0 30px 2em 30px;
-      width: 85%;
 
       .hljs {
         padding: 1em;
@@ -48,8 +47,44 @@
     }
 
     &__links {
+      position: sticky;
+      z-index: 3;
+      top: 53px;
       padding: 1em 1em 1em 30px;
-      background: $color-mercury;
+      background: $color-action-2;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &__summary {
+      display: flex;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+
+      &-item {
+        margin: 0 6px;
+        font-size: 1.2rem;
+
+        &:first-child {
+          margin-left: 0;
+        }
+      }
+
+      &-link {
+        text-decoration: underline;
+        cursor: pointer;
+
+        &:hover {
+          text-decoration: none;
+        }
+
+        &:active,
+        &:focus {
+          color: red;
+        }
+      }
     }
 
     &__info {
@@ -62,6 +97,13 @@
       .af-alert--cmpt {
         margin: 1rem;
       }
+    }
+  }
+
+  &-title {
+    &--page {
+      font-size: 2.2rem;
+      margin: 1.5rem 0;
     }
   }
 }
