--- a/storybook/design-system/src/pages/atoms/button/templates/circle.pug
+++ b/storybook/design-system/src/pages/atoms/button/templates/circle.pug
@@ -1,11 +1,11 @@
 -var exemples = ["pushpin", "print", "arrow-xs-down", "heart", "eye-open", "menu-hamburger", "remove", "filter", "floppy-disk", "open"];
 
-.button-demo
+.tk-block-demo
   each ex in exemples
     div.fordemo
       a.af-btn--circle(href="#" role="button" )
         i.glyphicon(class=`glyphicon-${ex}`)
-.button-demo
+.tk-block-demo
   each ex in exemples
     div.fordemo
       a.af-btn--circle-small(href="#" role="button" )
