--- a/storybook/design-system/src/pages/atoms/button/templates/ghost.pug
+++ b/storybook/design-system/src/pages/atoms/button/templates/ghost.pug
@@ -1,30 +1,30 @@
-.button-demo
+.tk-block-demo
   a.af-link(href="#") Simple link
-.button-demo
+.tk-block-demo
   a.af-link.af-link--hasIconLeft(href="#")
     i.glyphicon.glyphicon-plus
     span.af-link__text Link with icon
-.button-demo
+.tk-block-demo
   a.af-link.af-link--hasIconLeft(href="#")
     i.glyphicon.glyphicon-arrowthin-left
     span.af-link__text Back Link
-.button-demo
+.tk-block-demo
   a.af-link.af-link--hasIconLeft(href="#")
     i.glyphicon.glyphicon-plus-sign
     span.af-link__text Link plus
-.button-demo
+.tk-block-demo
   a.af-link.af-link--hasIconLeft(href="#")
     i.glyphicon.glyphicon-pencil
     span.af-link__text Link edition
-.button-demo
+.tk-block-demo
   a.af-link.af-link--hasIconLeft(href="#")
     i.glyphicon.glyphicon-print
     span.af-link__text Link print
-.button-demo
+.tk-block-demo
   a.af-link.af-link--hasIconLeft(href="#")
     i.glyphicon.glyphicon-question-sign
     span.af-link__text Link question
-.button-demo
+.tk-block-demo
   a.af-link.af-link--hasIconRight(href="#")
     span.af-link__text Link new window
     i.glyphicon.glyphicon-new-window
