--- a/storybook/design-system/src/pages/atoms/badge/index.scss
+++ b/storybook/design-system/src/pages/atoms/badge/index.scss
@@ -3,7 +3,7 @@
   margin: 0 1rem 1rem 0;
 }
 
-.button-demo {
+.tk-block-demo {
   display: flex;
   align-content: space-between;
   flex-wrap: wrap;
