--- a/storybook/design-system/src/index.scss
+++ b/storybook/design-system/src/index.scss
@@ -57,6 +57,7 @@
 @import './pages/molecules/title-bar/index';
 @import './pages/molecules/alert/index';
 @import './pages/molecules/pager/index';
+@import './pages/molecules/table/index';
 @import './pages/organisms/accordion/index';
 @import './pages/organisms/paging/index';
 @import './pages/organisms/panel/index';
