build(design-system): watch images gulp task

--- a/storybook/design-system/src/index.scss
+++ b/storybook/design-system/src/index.scss
@@ -61,5 +61,6 @@
 @import './pages/organisms/accordion/index';
 @import './pages/organisms/paging/index';
 @import './pages/organisms/panel/index';
+@import './pages/organisms/header/index';
 @import './pages/atoms/popover/index';
 @import './pages/atoms/slider/index';
