--- a/storybook/design-system/src/pages/molecules/title-bar/templates/title-bar-complex.pug
+++ b/storybook/design-system/src/pages/molecules/title-bar/templates/title-bar-complex.pug
@@ -4,7 +4,7 @@
       .af-btn__wrapper
         i.af-title-bar__icon.glyphicon.glyphicon-menu-hamburger
     h1.af-title-bar__title
-      | Toolkit AXA
+      | Slash Design System
       small.af-title-bar__subtitle Sous titre
     .af-title-bar__actions
       a.af-title-bar__link(href="#lien" title="lien titlebar") lien titlebar
