--- a/storybook/design-system/src/pages/organisms/restitution/templates/restitution-double.pug
+++ b/storybook/design-system/src/pages/organisms/restitution/templates/restitution-double.pug
@@ -59,6 +59,6 @@
                 span.af-restitution__text Services inclus
               dd.af-restitution__listdef-value
                 ul.af-restitution__listul
-                  li.af-restitution__listul-item Réseau entreprises agréées AXA
+                  li.af-restitution__listul-item Réseau entreprises agréées
                   li.af-restitution__listul-item Avance aux frais de première nécessité
                   li.af-restitution__listul-item Services déménagement
